cfdsa-master/workshop04/4_wordpress/wpapp-ing.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: wpapp-ing
   labels:
      app: wordpress
   annotations:
      kubernetes.io/ingress.class: "nginx"

spec:
   rules:
   - host: "wpapp.157.230.193.185.nip.io"
     http:
        paths:
        - path: /
          backend:
             serviceName: wpapp-svc
             servicePort: 80
